chtl-compiler/generated/js/grammar/ECMAScriptParser.cpp

// Generated from grammar/ECMAScript.g4 by ANTLR 4.13.1


#include "ECMAScriptListener.h"

#include "ECMAScriptParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct ECMAScriptParserStaticData final {
  ECMAScriptParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  ECMAScriptParserStaticData(const ECMAScriptParserStaticData&) = delete;
  ECMAScriptParserStaticData(ECMAScriptParserStaticData&&) = delete;
  ECMAScriptParserStaticData& operator=(const ECMAScriptParserStaticData&) = delete;
  ECMAScriptParserStaticData& operator=(ECMAScriptParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ecmascriptParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
ECMAScriptParserStaticData *ecmascriptParserStaticData = nullptr;

void ecmascriptParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ecmascriptParserStaticData != nullptr) {
    return;
  }
#else
  assert(ecmascriptParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<ECMAScriptParserStaticData>(
    std::vector<std::string>{
      "program", "sourceElements", "sourceElement", "chtlJsElement", "chtlEnhancedSelector", 
      "selectorExpression", "chtlArrowAccess", "chtlListenFunction", "chtlDelegateFunction", 
      "chtlAnimateFunction", "chtlVirDeclaration", "chtlVirAccess", "chtlVariableUsage", 
      "chtlOriginEmbed", "statement", "block", "statementList", "variableStatement", 
      "varModifier", "variableDeclarationList", "variableDeclaration", "emptyStatement", 
      "expressionStatement", "ifStatement", "iterationStatement", "forControl", 
      "continueStatement", "breakStatement", "returnStatement", "withStatement", 
      "switchStatement", "caseBlock", "caseClauses", "caseClause", "throwStatement", 
      "tryStatement", "catchProduction", "finallyProduction", "debuggerStatement", 
      "labelledStatement", "functionDeclaration", "formalParameterList", 
      "functionBody", "expressionSequence", "singleExpression", "assignmentOperator", 
      "primaryExpression", "functionExpression", "arrowFunctionExpression", 
      "arrowFunctionParameters", "arrowFunctionBody", "arguments", "argumentList", 
      "literal", "nullLiteral", "booleanLiteral", "stringLiteral", "templateLiteral", 
      "templateStringAtom", "regularExpressionLiteral", "numericLiteral", 
      "arrayLiteral", "elementList", "arrayElement", "objectLiteral", "propertyAssignment", 
      "propertyName", "getter", "setter", "identifier", "eos"
    },
    std::vector<std::string>{
      "", "'{{'", "'}}'", "'->'", "'listen'", "'('", "')'", "'delegate'", 
      "'animate'", "'vir'", "'='", "'.'", "'[Origin]'", "'@JavaScript'", 
      "';'", "'{'", "'}'", "'var'", "'let'", "'const'", "','", "'if'", "'else'", 
      "'do'", "'while'", "'for'", "'in'", "'of'", "'continue'", "'break'", 
      "'return'", "'with'", "'switch'", "'case'", "':'", "'default'", "'throw'", 
      "'try'", "'catch'", "'finally'", "'debugger'", "'function'", "'['", 
      "']'", "'new'", "'++'", "'--'", "'delete'", "'void'", "'typeof'", 
      "'+'", "'-'", "'~'", "'!'", "'*'", "'/'", "'%'", "'<<'", "'>>'", "'>>>'", 
      "'<'", "'>'", "'<='", "'>='", "'instanceof'", "'=='", "'!='", "'==='", 
      "'!=='", "'&'", "'^'", "'|'", "'&&'", "'||'", "'\\u003F'", "'*='", 
      "'/='", "'%='", "'+='", "'-='", "'<<='", "'>>='", "'>>>='", "'&='", 
      "'^='", "'|='", "'this'", "'=>'", "'null'", "'true'", "'false'", "'`'", 
      "'${'", "'get'", "'set'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "StringLiteral", "TemplateStringAtom", 
      "RegularExpressionLiteral", "DecimalLiteral", "HexIntegerLiteral", 
      "OctalIntegerLiteral", "BinaryIntegerLiteral", "Identifier", "WhiteSpaces", 
      "LineTerminatorHidden", "MultiLineComment", "SingleLineComment", "GeneratorComment", 
      "SELECTOR_CONTENT"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ecmascriptParserStaticData = staticData.release();
}

}

ECMAScriptParser::ECMAScriptParser(TokenStream *input) : ECMAScriptParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

ECMAScriptParser::ECMAScriptParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  ECMAScriptParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ecmascriptParserStaticData->atn, ecmascriptParserStaticData->decisionToDFA, ecmascriptParserStaticData->sharedContextCache, options);
}

ECMAScriptParser::~ECMAScriptParser() {
  delete _interpreter;
}

const atn::ATN& ECMAScriptParser::getATN() const {
  return *ecmascriptParserStaticData->atn;
}

std::string ECMAScriptParser::getGrammarFileName() const {
  return "ECMAScript.g4";
}

const std::vector<std::string>& ECMAScriptParser::getRuleNames() const {
  return ecmascriptParserStaticData->ruleNames;
}

const dfa::Vocabulary& ECMAScriptParser::getVocabulary() const {
  return ecmascriptParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView ECMAScriptParser::getSerializedATN() const {
  return ecmascriptParserStaticData->serializedATN;
}


//----------------- ProgramContext ------------------------------------------------------------------

ECMAScriptParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ECMAScriptParser::ProgramContext::EOF() {
  return getToken(ECMAScriptParser::EOF, 0);
}

ECMAScriptParser::SourceElementsContext* ECMAScriptParser::ProgramContext::sourceElements() {
  return getRuleContext<ECMAScriptParser::SourceElementsContext>(0);
}


size_t ECMAScriptParser::ProgramContext::getRuleIndex() const {
  return ECMAScriptParser::RuleProgram;
}

void ECMAScriptParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void ECMAScriptParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

ECMAScriptParser::ProgramContext* ECMAScriptParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, ECMAScriptParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(143);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 18005585235465138) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 545179828225) != 0)) {
      setState(142);
      sourceElements();
    }
    setState(145);
    match(ECMAScriptParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SourceElementsContext ------------------------------------------------------------------

ECMAScriptParser::SourceElementsContext::SourceElementsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<ECMAScriptParser::SourceElementContext *> ECMAScriptParser::SourceElementsContext::sourceElement() {
  return getRuleContexts<ECMAScriptParser::SourceElementContext>();
}

ECMAScriptParser::SourceElementContext* ECMAScriptParser::SourceElementsContext::sourceElement(size_t i) {
  return getRuleContext<ECMAScriptParser::SourceElementContext>(i);
}


size_t ECMAScriptParser::SourceElementsContext::getRuleIndex() const {
  return ECMAScriptParser::RuleSourceElements;
}

void ECMAScriptParser::SourceElementsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceElements(this);
}

void ECMAScriptParser::SourceElementsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceElements(this);
}

ECMAScriptParser::SourceElementsContext* ECMAScriptParser::sourceElements() {
  SourceElementsContext *_localctx = _tracker.createInstance<SourceElementsContext>(_ctx, getState());
  enterRule(_localctx, 2, ECMAScriptParser::RuleSourceElements);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(148); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(147);
      sourceElement();
      setState(150); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & 18005585235465138) != 0) || ((((_la - 64) & ~ 0x3fULL) == 0) &&
      ((1ULL << (_la - 64)) & 545179828225) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SourceElementContext ------------------------------------------------------------------

ECMAScriptParser::SourceElementContext::SourceElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ECMAScriptParser::StatementContext* ECMAScriptParser::SourceElementContext::statement() {
  return getRuleContext<ECMAScriptParser::StatementContext>(0);
}

ECMAScriptParser::FunctionDeclarationContext* ECMAScriptParser::SourceElementContext::functionDeclaration() {
  return getRuleContext<ECMAScriptParser::FunctionDeclarationContext>(0);
}

ECMAScriptParser::ChtlJsElementContext* ECMAScriptParser::SourceElementContext::chtlJsElement() {
  return getRuleContext<ECMAScriptParser::ChtlJsElementContext>(0);
}


size_t ECMAScriptParser::SourceElementContext::getRuleIndex() const {
  return ECMAScriptParser::RuleSourceElement;
}

void ECMAScriptParser::SourceElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterSourceElement(this);
}

void ECMAScriptParser::SourceElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitSourceElement(this);
}

ECMAScriptParser::SourceElementContext* ECMAScriptParser::sourceElement() {
  SourceElementContext *_localctx = _tracker.createInstance<SourceElementContext>(_ctx, getState());
  enterRule(_localctx, 4, ECMAScriptParser::RuleSourceElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(155);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(152);
      statement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(153);
      functionDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(154);
      chtlJsElement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlJsElementContext ------------------------------------------------------------------

ECMAScriptParser::ChtlJsElementContext::ChtlJsElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ECMAScriptParser::ChtlEnhancedSelectorContext* ECMAScriptParser::ChtlJsElementContext::chtlEnhancedSelector() {
  return getRuleContext<ECMAScriptParser::ChtlEnhancedSelectorContext>(0);
}

ECMAScriptParser::ChtlArrowAccessContext* ECMAScriptParser::ChtlJsElementContext::chtlArrowAccess() {
  return getRuleContext<ECMAScriptParser::ChtlArrowAccessContext>(0);
}

ECMAScriptParser::ChtlListenFunctionContext* ECMAScriptParser::ChtlJsElementContext::chtlListenFunction() {
  return getRuleContext<ECMAScriptParser::ChtlListenFunctionContext>(0);
}

ECMAScriptParser::ChtlDelegateFunctionContext* ECMAScriptParser::ChtlJsElementContext::chtlDelegateFunction() {
  return getRuleContext<ECMAScriptParser::ChtlDelegateFunctionContext>(0);
}

ECMAScriptParser::ChtlAnimateFunctionContext* ECMAScriptParser::ChtlJsElementContext::chtlAnimateFunction() {
  return getRuleContext<ECMAScriptParser::ChtlAnimateFunctionContext>(0);
}

ECMAScriptParser::ChtlVirDeclarationContext* ECMAScriptParser::ChtlJsElementContext::chtlVirDeclaration() {
  return getRuleContext<ECMAScriptParser::ChtlVirDeclarationContext>(0);
}

ECMAScriptParser::ChtlVirAccessContext* ECMAScriptParser::ChtlJsElementContext::chtlVirAccess() {
  return getRuleContext<ECMAScriptParser::ChtlVirAccessContext>(0);
}

ECMAScriptParser::ChtlVariableUsageContext* ECMAScriptParser::ChtlJsElementContext::chtlVariableUsage() {
  return getRuleContext<ECMAScriptParser::ChtlVariableUsageContext>(0);
}

ECMAScriptParser::ChtlOriginEmbedContext* ECMAScriptParser::ChtlJsElementContext::chtlOriginEmbed() {
  return getRuleContext<ECMAScriptParser::ChtlOriginEmbedContext>(0);
}


size_t ECMAScriptParser::ChtlJsElementContext::getRuleIndex() const {
  return ECMAScriptParser::RuleChtlJsElement;
}

void ECMAScriptParser::ChtlJsElementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlJsElement(this);
}

void ECMAScriptParser::ChtlJsElementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlJsElement(this);
}

ECMAScriptParser::ChtlJsElementContext* ECMAScriptParser::chtlJsElement() {
  ChtlJsElementContext *_localctx = _tracker.createInstance<ChtlJsElementContext>(_ctx, getState());
  enterRule(_localctx, 6, ECMAScriptParser::RuleChtlJsElement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(166);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(157);
      chtlEnhancedSelector();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(158);
      chtlArrowAccess();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(159);
      chtlListenFunction();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(160);
      chtlDelegateFunction();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(161);
      chtlAnimateFunction();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(162);
      chtlVirDeclaration();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(163);
      chtlVirAccess();
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(164);
      chtlVariableUsage();
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(165);
      chtlOriginEmbed();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ChtlEnhancedSelectorContext ------------------------------------------------------------------

ECMAScriptParser::ChtlEnhancedSelectorContext::ChtlEnhancedSelectorContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

ECMAScriptParser::SelectorExpressionContext* ECMAScriptParser::ChtlEnhancedSelectorContext::selectorExpression() {
  return getRuleContext<ECMAScriptParser::SelectorExpressionContext>(0);
}


size_t ECMAScriptParser::ChtlEnhancedSelectorContext::getRuleIndex() const {
  return ECMAScriptParser::RuleChtlEnhancedSelector;
}

void ECMAScriptParser::ChtlEnhancedSelectorContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChtlEnhancedSelector(this);
}

void ECMAScriptParser::ChtlEnhancedSelectorContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<ECMAScriptListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChtlEnhancedSelector(this);
}

ECMAScriptParser::ChtlEnhancedSelectorContext* ECMAScriptParser::chtlEnhancedSelector() {
  ChtlEnhancedSelectorContext *_localctx = _tracker.createInstance<ChtlEnhancedSelectorContext>(_ctx, getState());
  enterRule(_localctx, 8, ECMAScriptParser::RuleChtlEnhancedSelector);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    match(ECMAScriptParser::T__0);
    setState(169);
    selectorExpression();
    setState(170);
    match(ECMAScriptParser::T__1);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectorExpressionContext ------------------------------------------------------------------

ECMAScriptParser::SelectorExpressionContext::SelectorExpressionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* ECMAScriptParser::SelectorExpressionContext::SELECTOR_CONTENT() {
  return getToken(ECMAScriptParser::SELECTOR_CONTENT, 0);
}


size_t ECMAScriptParser::SelectorExpressionContext::getRuleIndex() const {
  return ECMAScriptParser::RuleSelectorExpression;
}
